--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "description": "A collaborative dictionary of English constructions in CxG",
   "scripts": {
-    "validate": "node scripts/validate.js"
+    "validate": "node scripts/validate.js && node scripts/lint.js",
+    "lint": "node scripts/lint.js"
   },
   "dependencies": {
     "ajv": "^8.12.0",
