add determinatives inventory

--- a/data/indices/syntactic-diagnostics.yaml
+++ b/data/indices/syntactic-diagnostics.yaml
@@ -4,6 +4,7 @@ syntactic_diagnostics:
     examples:
       - "*New car was stolen."
       - "The/One/Ally's new car was stolen."
+
   deitality-diagnostics:
     description: "Diagnostic profile for deitality in determiner realizations."
     diagnostics:
@@ -11,14 +12,145 @@ syntactic_diagnostics:
       - partitive-of-complement
       - identificational-hosting
       - one-substitution
+
   existential-there-pivot:
     description: "Under neutral prosody, deital determiners resist pivot position in existential there."
     examples:
       - "*There is the key on the table."
       - "There is a key on the table."
+
   partitive-of-complement:
     description: "Eligibility as complement of partitive of (e.g., 'some of the N')."
+
   identificational-hosting:
     description: "Ability to host identificational constructions (e.g., equatives/clefts)."
+
   one-substitution:
     description: "Compatibility with one-substitution as a test of determiner status."
+
+  determinatives-inventory:
+    description: "Inventory of determinatives (terminology: Simple English Wiktionary uses 'determiners' for the category; CGEL uses 'determinatives')."
+    sources:
+      - "Simple English Wiktionary: Category:Determiners"
+      - "literature/numerals.tex (ELL draft)"
+    notes:
+      - "CGEL treats determinatives as a lexical category and the determiner as a function."
+      - "Numerals.tex argues determinatives are a small closed list (basic numeratives 0–99 plus magnitude words like hundred, thousand, million), with larger numeratives as phrases."
+    subcategories:
+      - "Singular determiners"
+      - "Articles"
+      - "Numbers"
+      - "Relative determiners"
+      - "Count determiners"
+      - "Definite determiners"
+      - "Indefinite determiners"
+      - "Non-count determiners"
+      - "Plural determiners"
+    items:
+      - "a"
+      - "a certain"
+      - "a few"
+      - "a little"
+      - "all"
+      - "an"
+      - "another"
+      - "any"
+      - "anybody"
+      - "anyone"
+      - "anything"
+      - "anytime"
+      - "anywhere"
+      - "billion"
+      - "both"
+      - "centillion"
+      - "certain"
+      - "each"
+      - "eight"
+      - "eighteen"
+      - "eighty"
+      - "either"
+      - "eleven"
+      - "enough"
+      - "every"
+      - "everybody"
+      - "everyone"
+      - "everything"
+      - "everywhere"
+      - "few"
+      - "fewer"
+      - "fewest"
+      - "fifteen"
+      - "fifty"
+      - "five"
+      - "forty"
+      - "four"
+      - "fourteen"
+      - "hundred"
+      - "last"
+      - "least"
+      - "less"
+      - "little"
+      - "many"
+      - "many a"
+      - "million"
+      - "more"
+      - "most"
+      - "much"
+      - "multiple"
+      - "neither"
+      - "next"
+      - "nine"
+      - "nineteen"
+      - "ninety"
+      - "no"
+      - "no one"
+      - "nobody"
+      - "none"
+      - "nonillion"
+      - "nothing"
+      - "nowhere"
+      - "once"
+      - "one"
+      - "said"
+      - "seven"
+      - "seventeen"
+      - "seventy"
+      - "several"
+      - "six"
+      - "sixteen"
+      - "sixty"
+      - "some"
+      - "somebody"
+      - "someday"
+      - "someone"
+      - "something"
+      - "sometime"
+      - "somewhat"
+      - "somewhere"
+      - "sufficient"
+      - "ten"
+      - "that"
+      - "the"
+      - "these"
+      - "thirteen"
+      - "thirty"
+      - "this"
+      - "those"
+      - "thousand"
+      - "three"
+      - "thrice"
+      - "trillion"
+      - "twelve"
+      - "twenty"
+      - "twice"
+      - "two"
+      - "umpteen"
+      - "various"
+      - "we"
+      - "what"
+      - "whatever"
+      - "whatsoever"
+      - "which"
+      - "whichever"
+      - "you"
+      - "zero"
