--- a/data/constructions/np-bare-001.yaml
+++ b/data/constructions/np-bare-001.yaml
@@ -114,3 +114,5 @@ relations:
     construction: deictic-001
     type: related-to
     notes: 'Original type: enables.'
+syntacticRefs:
+  - bare-singular-exceptions
