--- a/data/constructions/numerative-magnitude-head-001.yaml
+++ b/data/constructions/numerative-magnitude-head-001.yaml
@@ -13,6 +13,8 @@ formRefs:
   - numerative-magnitude
 semanticRefs:
   - cardinality
+syntacticRefs:
+  - prosodic-breaks-magnitude
 relatedConstructions:
   - id: determination-001
     relationship: related-to
