--- a/data/constructions/numerative-ordinal-rightmost-001.yaml
+++ b/data/constructions/numerative-ordinal-rightmost-001.yaml
@@ -17,6 +17,8 @@ formRefs:
   - numerative-magnitude
 semanticRefs:
   - cardinality
+syntacticRefs:
+  - ordinal-fractional-rightmost-base
 relatedConstructions:
   - id: numerative-compound-basic-001
     relationship: related-to
