--- a/data/constructions/subject-determiner-001.yaml
+++ b/data/constructions/subject-determiner-001.yaml
@@ -14,6 +14,8 @@ constraints:
     description: Genitive NP occupies the determiner position in NP structure.
 formRefs:
   - subject-determiner-genitive
+syntacticRefs:
+  - deitality-diagnostics
 relatedConstructions:
   - id: determination-001
     relationship: specialization-of
