--- a/data/constructions/numerative-ten-001.yaml
+++ b/data/constructions/numerative-ten-001.yaml
@@ -12,5 +12,7 @@ formRefs:
 semanticRefs:
   - cardinality
 relatedConstructions:
+  - id: numerative-basic-lexeme-001
+    relationship: specialization-of
   - id: determination-001
     relationship: related-to
