--- a/data/constructions/numerative-factor-modifier-001.yaml
+++ b/data/constructions/numerative-factor-modifier-001.yaml
@@ -13,7 +13,7 @@ constraints:
   - type: structural
     description: Factor is a modifier of the magnitude head, not a determiner of the NP.
   - type: structural
-    description: Factor is drawn from basic numeratives (single-digit, ten, teens, decades, or compounds).
+    description: Factor is drawn from the basic numeratives (0–99).
 formRefs:
   - numerative-factor
   - numerative-magnitude
@@ -22,17 +22,7 @@ semanticRefs:
 relatedConstructions:
   - id: numerative-magnitude-head-001
     relationship: contains
-  - id: numerative-single-digit-001
-    relationship: contains
-  - id: numerative-ten-001
-    relationship: contains
-  - id: numerative-teen-irregular-001
-    relationship: contains
-  - id: numerative-teen-001
-    relationship: contains
-  - id: numerative-decade-001
-    relationship: contains
-  - id: numerative-compound-basic-001
+  - id: numerative-basic-lexeme-001
     relationship: contains
   - id: determination-001
     relationship: related-to
