--- a/data/constructions/numerative-single-digit-001.yaml
+++ b/data/constructions/numerative-single-digit-001.yaml
@@ -14,5 +14,7 @@ formRefs:
 semanticRefs:
   - cardinality
 relatedConstructions:
+  - id: numerative-basic-lexeme-001
+    relationship: specialization-of
   - id: determination-001
     relationship: related-to
